--- a/.github/workflows/jekyll-build-pages.yml
+++ b/.github/workflows/jekyll-build-pages.yml
@@ -1,3 +1,3 @@
-- name: Build Jekyll for GitHub Pages
+name: Build Jekyll for GitHub Pages
  
-  uses: actions/jekyll-build-pages@v1.0.8
+uses: actions/jekyll-build-pages@v1.0.8
