added config w proper URL

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: Alexis Lipina
 subtitle: Game Developer
 email: alexis.lipina@gmail.com
 description: Here you can explore some projects I've worked on. <br /> Please hire me!!!!🥺
-baseurl: "/forty-jekyll-theme" # the subpath of your site, e.g. /blog
-url: # the base hostname & protocol for your site
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: https://alexis-lipina.github.io/ # the base hostname & protocol for your site
 author:
 street_address:
 city: Rochester
